# diabetes_risk_predictor

./: .gitignore  .replit  Dockerfile  LICENSE  README.md  app.py  diabetes_predictor.py  model_prediction.py  pyproject.toml  replit.nix  requirements.txt
.github/workflows/: docker-publish.yml
classifiers/: diabetes_model_v2.pk  diabetes_model_v3.pk
models/: diabetes_model_v1.pk
notebooks/: diabetes_project.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/721917347188633151/: meta.yaml
notebooks/mlruns/721917347188633151/004a08d63e9a4325bd4e835e8fbf8f23/: meta.yaml
notebooks/mlruns/721917347188633151/0715f5f7ed8e4fda98af3a8a809b42bf/: meta.yaml
notebooks/mlruns/721917347188633151/2bc1eb65b32b4c77b21f9944baf7c174/: meta.yaml
notebooks/mlruns/721917347188633151/40b6d2ec531a4865869f28c1080ee311/: meta.yaml
notebooks/mlruns/721917347188633151/b4fd7a6a78534cabbd12ac687803709b/: meta.yaml
notebooks/mlruns/721917347188633151/cab39062239e43f4aca218ba9c24b24f/: meta.yaml
notebooks/mlruns/721917347188633151/d3c8672f2cac4aa1a03a3791e61ce028/: meta.yaml
notebooks/mlruns/721917347188633151/e78d0e1435094127854da089cf6ca62f/: meta.yaml
notebooks/mlruns/721917347188633151/tags/: mlflow.note.content
notebooks/mlruns/814406291820996270/: meta.yaml
src/pipelines/: predict_pipeline.py
templates/: bootstrap.html  footer.html  home.html  nav.html  questionnaire.html  result.html  result_negative.html  result_positive.html  submission.html
tests/: test_diabetes_predictor.py  test_model_prediction.py  test_predict_pipeline.py
(+194 files in other folders)
